<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="showtemp">ShowTemp</string>
    <string name="button">Button</string>
    <string name="average_temp">Average Temp</string>
    <string name="avg_temp">Avg Temp</string>
    <string name="futuretemp">FutureTemp</string>
    <string name="weather_app">Weather App</string>
    <string name="current_conditions">Current Conditions</string>
    <string name="hourly_temperature">Hourly Temperature</string>
    <string name="upcoming_temperature">Upcoming Temperature</string>
    <string name="showconditions">showConditions</string>
    <string name="past_temperature">Past Temperature</string>
    <string name="showpast">ShowPast</string>
    <string name="textview">TextView</string>
    <string name="temperature">Temperature</string>
    <string name="upcoming_temp">Upcoming Temp</string>
</resources>
