<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ShowTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/showtemp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248"
        tools:text="showConditions" />

    <Button
        android:id="@+id/CurrentConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="527dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Current Conditions" />

    <Button
        android:id="@+id/AvgTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="69dp"
        android:text="@string/average_temp"
        app:layout_constraintBottom_toTopOf="@+id/PredictTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hour" />

    <Button
        android:id="@+id/Hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="413dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CurrentConditions"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Hourly Temperature" />

    <TextView
        android:id="@+id/averagetemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="337dp"
        android:text="@string/avg_temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AvgTemp" />

    <Button
        android:id="@+id/PredictTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="206dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AvgTemp"
        tools:text="Upcoming Temperature" />

    <TextView
        android:id="@+id/FutureTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="226dp"
        android:text="@string/futuretemp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PredictTemp"
        app:layout_constraintTop_toBottomOf="@+id/averagetemp" />

    <EditText
        android:id="@+id/WeatherApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/weather_app"
        app:layout_constraintBottom_toTopOf="@+id/CurrentConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tempperHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="70dp"
        android:text="@string/showtemp"
        app:layout_constraintBottom_toTopOf="@+id/averagetemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Hour"
        app:layout_constraintTop_toBottomOf="@+id/ShowTemperature" />

</androidx.constraintlayout.widget.ConstraintLayout>